// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  /
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  /
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  /
</a>
`;
